--- a/client/src/components/FlightCard.css
+++ b/client/src/components/FlightCard.css
@@ -136,6 +136,16 @@
   background-color: var(--surface-color);
 }
 
+.btn-view-history {
+  border-color: var(--primary-color);
+  color: var(--primary-color);
+}
+
+.btn-view-history:hover {
+  background-color: var(--primary-color);
+  color: white;
+}
+
 .btn-toggle.active {
   border-color: var(--primary-color);
   background-color: var(--primary-color);
